# Intro2ComputerGraphics2020fall

./: README.MD
HW1/: CMakeLists.txt  main-base.cpp  main-example.cpp  main.cpp
HW2/: README.MD
HW2/Debug/: VertexShaderExample.ilk  hw2.ilk
HW2/VertexShaderExample/VertexShaderExample/Debug/: VertexShaderExample.exe.recipe  vc142.idb
HW2/VertexShaderExample/VertexShaderExample/Debug/VertexSh.E1D5A0AF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VertexShaderExample.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HW2/hw2/: README.MD  main.cpp
HW2/hw2/Debug/: hw2.exe.recipe  vc142.idb
HW2/hw2/Debug/hw2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  hw2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HW2/hw2/dll/Shaders/: fragmentShader.frag  vertexShader.vert
HW3/Debug/: hw3.ilk
HW3/hw3/: main.cpp
HW3/hw3/Debug/: hw3.exe.recipe  vc142.idb
HW3/hw3/Debug/hw3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  hw3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HW3/hw3/dll/Shaders/: EdgeEffect.frag  Phongshading.frag  ToonShading.frag  ToonShading.vert
HW4/: README.MD  video_link.txt
HW4/Debug/: hw4.ilk
HW4/hw4/: main.cpp
HW4/hw4/Debug/: hw4.exe.recipe  vc142.idb
HW4/hw4/Debug/hw4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  hw4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HW4/hw4/dll/Shaders/: Umbreon.frag  Umbreon.vert  explosion.geom
